--- a/demo1/pom.xml
+++ b/demo1/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>org.melihsen</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -29,7 +30,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<scope>annotationProcessor</scope>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -45,5 +46,9 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<modules>
+		<module>demo-core</module>
+	</modules>
 
 </project>
