--- a/demo1/pom.xml
+++ b/demo1/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.melihsen</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>demo-rest-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>demo</name>
